Fixed issue with button not spaced and aligned
Was giving too much freedom to these badboys. Should now be spaced and
aligned

--- a/app/assets/stylesheets/post/post.scss
+++ b/app/assets/stylesheets/post/post.scss
@@ -29,6 +29,12 @@
       font-family: olivier;
       font-size: 1.4rem;
     }
+
+     & > div, & > iframe {
+       display: inline-block;
+       vertical-align: middle;
+       margin: 0 12px;
+     }
   }
 }
 
